Stop horizontal scroll
hide overflox on x-axis in css

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -6,7 +6,9 @@
 html,
 body {
   width: 100%;
-  height: 100%; }
+  height: 100%; 
+  overflow-x: hidden;
+}
 
 body {
   font-family: 'bebas-neue', 'Muli', 'Helvetica', 'Arial', 'sans-serif'; 
